[package]
name = "neotron-qemu-bios"
version = "0.1.0"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
edition = "2021"
readme = "README.md"
license = "GPL3"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.5"
neotron-common-bios = "*"
panic-semihosting = "*"
postcard = "1.0"
serde = { version = "1.0", default-features = false }

[dependencies.neotron-os]
# git = "https://github.com/neotron-compute/Neotron-OS"
# branch = "lib-mode"
path = "../Neotron-OS"
features = ["lib-mode"]

# Lets you use cargo-fix
[[bin]]
name = "neotron-qemu-bios"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
